# KDAIL-Forklift

./: .gitignore  .gitmodules  README.md
IMU_SEN-19895/: yaw_sen19895.py
IMU_SEN-19895/Calibrated_IMU_readings/: Calibrated_IMU_readings.ino
IMU_SEN-19895/IMU_Clibration/: IMU_Clibration.ino
IMU_SEN-19895/src/: example_mmc5983ma.py
IMU_SEN-19895/src/ISM330DHCX_accelerometer/: ism330dhcx.py
IMU_SEN-19895/src/MMCA5983MA_magnetometer/: constants_mmc5983ma.py  io_mmc5938ma.py  mmc5983ma.py
Resources/FiRa Consortium/: README.md
Resources/UWB_Fundamentals/: readme.md
SLAM/ros2_ws/install/: local_setup.sh  setup.sh
SLAM/ros2_ws/log/: latest_build
aruco/: aruco_detector.py  aruco_detector_live.py  aruco_generator.py
basic-control/: check_motors.py  encoder.py  encoder1.py  encoder_test.py  forklift_control.py  wasd_control(pwm).py  wasd_control(pwm)1.py  wasd_control.py
bot_controls/IMU_SEN-19895/Calibrated_IMU_readings/: Calibrated_IMU_readings.ino
bot_controls/tests/: data.py
bot_design/STEP/: 4mm-screw_spacer_OD-6.5mm_ID-4.2mm_75mm.step  N20_Motor_Mount_Lower.step  N20_Motor_Mount_Upper.step  PVC_Pipe_25mm_Stand.step  RP_Lidar_A2M8_Mount.step  UWB_Mount_PVC_Connector_v1.step  UWB_Mount_V1.step  UWB_Mount_v2.step  UWB_Mount_v2_without_battery.step  UWB_Tag_Accuracy_Check.step  UWB_anchor_stand_13cm.step  large chassis.step  small_chassis.step
bot_design/STL/: 4mm-screw_spacer_OD-6.5mm_ID-4.2mm_75mm.stl  N20_Motor_Mount_Lower.stl  N20_Motor_Mount_Upper.stl  PVC_Pipe_25mm_Stand.stl  RP_Lidar_A2M8_Mount.stl  UWB_Mount_PVC_Connector_v1.stl  UWB_Mount_v1.stl  UWB_Mount_v2.stl  UWB_Mount_v2_without_battery.stl  UWB_Tag_Accuracy_Check.stl  UWB_anchor_stand_13cm.stl  large_chassis.stl  small_chassis.stl
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/Forklift_Firmware/: CMakeLists.txt  README_ANCHOR_SLAM.md  README_UWB_SLAM.md  package.xml
ros2_ws/src/Forklift_Firmware/config/: mapper_params_online_async.yaml  slam_config.yaml
ros2_ws/src/Forklift_Firmware/launch/: display.launch.py  static_slam.launch.py  uwb_slam_system.launch.py
ros2_ws/src/Forklift_Firmware/rviz/: uwb_slam.rviz
ros2_ws/src/Forklift_Firmware/src/: aruco-detection-and-streaming.py  camera_init.py  coordinate_system_visualizer.py  dummy_uwb_publisher.py  dynamic_uwb_positioning.py  imu_esp_pub.py  imu_pub.py  motor_controller.py  raw_uwb_publish.py  uwb_imu_transform_publisher.py  uwb_static_slam.py  uwb_to_odom.py
ros2_ws/src/Forklift_Firmware/src/old_files/: imu_publisher.py  keyboard_uwb_publisher.py  uwb_demo.py  uwb_publisher_old.py  uwb_raw_data.py  uwb_to_odom.py  uwb_transform_publisher.py
ros2_ws/src/Forklift_Firmware/src/uwb_fusion/: uwb_fusion_test.py  uwb_imu_fusion.py
ros2_ws/src/cartographer_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/cartographer_pkg/launch/: cartographer_slam.launch.py
ros2_ws/src/firmware_2/: CMakeLists.txt  package.xml
ros2_ws/src/firmware_2/launch/: slam_mapper.launch.py
ros2_ws/src/firmware_2/rviz/: config.rviz
ros2_ws/src/firmware_2/scripts/: slam_mapper.py  transform_publisher.py  updated_static_slam.py  uwb_for_web_position.py  uwb_position_calc.py  x_y_uwb_localisation.py
ros2_ws/src/firmware_2/scripts/navigation/: box_finding_and_nav.py  goal_navigator.py  goal_navigator_2.py  static_slam.py
ros2_ws/src/firmware_2/scripts/testing/: box_finding_and_nav.py  motor_speed_calc.py  new_box_nav.py  pose_publisher.py  pose_through_lidar.py  pose_through_lidar_w_mir_fix.py  revised_updated_static_slam.py
tests/: data.py  e.py  initialise.py  map.py  mpu_test.py  mpu_test1.py  mpu_ytest-1.py  mpu_ytest.py  outstream.py
uwb/.west/: config
web_control/web_for_data/: package-lock.json
web_control/webserver_ros/: server.js
web_for_data/: package-lock.json  package.json  server.js
web_for_data/public/: index.html
webserver_ros/: package-lock.json  package.json  server.js
webserver_ros/public/: index.html
(+84 files in other folders)
